// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Tag Snap Shot Chip 1`] = `
<span
  className="rounded-full px-6 py-2 text-2xl"
  style={
    {
      "backgroundColor": "#222222",
      "color": "white",
    }
  }
>
  Chip
</span>
`;

exports[`ui/Tag Snap Shot outline Chip 1`] = `
<span
  className="rounded-full px-6 py-2 text-2xl"
  style={
    {
      "border": "1px solid #222222",
      "color": "#222222",
    }
  }
>
  Chip
</span>
`;
